My Landing Page

--- a/index.html
+++ b/index.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charity Water Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>charity: water - Landing Page</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Hero Section: This is the main banner at the top of the page -->
-    <section class="hero">
-        <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
-        <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
-    </section>
+  <!-- Header section with logo and brand name -->
+  <div class="header">
+    <!-- Logo image -->
+    <img src="https://i.imgur.com/BVvDMrk.png" alt="charity: water logo" class="logo" width="100" height="60">
+    <!-- Brand name -->
+    <span class="brand">charity: water</span>
+  </div>
 
-    <!-- Story Section: This tells the story of the nonprofit -->
-    <section class="story">
-        <h2>Our Story</h2>
-        <p>
-         
-    </section>
+  <!-- Main content area -->
+  <div class="main-content">
+    <!-- Left side: Text and button -->
+    <div class="left">
+      <!-- Main message -->
+      <h1 class="quote">
+        “<span class="quote-bold">Climate Change Took Their Water. You Can Give It Back.</span>”
+      </h1>
+      <!-- Supporting text -->
+      <p class="support-text">
+        Help families on the frontlines of drought and heat gain access to safe, fresh water.
+      </p>
+      <!-- Call to action button -->
+      <a href="#" class="cta-button">Join the fight today!</a>
+    </div>
+    <!-- Right side: Image -->
+    <div class="right">
+      <!-- Main image, use a placeholder for now -->
+      <img src="https://cdn2.dropmarkusercontent.com/52043/01205d5f956e467b9564354b7f2d4b22bae516334218cb517544235cd3028209/preview/Zimbabwe_2022_CG-7675.jpg?Expires=1751752930&Signature=ZhhnMJZmVUCf2z8Dsl7TiVcF~0Um9JYK4tugyo5fDycbdIawoKNhJ04wW~Obnut1ykmaxQp3tVNjG0UgZ2HRkiC3Iax87q3tLAkNAST5Tyb2bEfOPjdWRueMuD3Ac0lOBRkWApYjKxFi8ROPAz5WB5lPy6Rd-Y1jcOr1dfvGcyWirWJzzGi9VcxRGLQNBw4udFf7a543lVn6V-Wz7AfCBc4h2S~6x1ocI1hZHbQEWUK8fXXD9-0VCQQjWdTk7WnBar2QszdV0dUE~ftL32~VFgPayxxZhEFScPQqKOIEHBMDFBCnfI6~LxoEKQ2X99DHgbpImz52mq3oDiZw8d6GBA__&Key-Pair-Id=APKAITQYWVEN757ZA4KQ" alt="Person with water" class="main-image">
+    </div>
+  </div>
 
-    <!-- Real-World Impact Story Section -->
-    <section class="impact-story">
-        <!-- Section headline -->
-        <h2>Real Impact: Meet Amina</h2>
-        <!-- Container for image and text -->
-        <div class="impact-content">
-            <!-- Impact image -->
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
-            <!-- Impact story text -->
-            <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
-            </p>
-        </div>
-    </section>
-
-    <!-- Call-to-Action Section: This encourages visitors to take action -->
-    <section class="call-to-action">
-        <h2>Make a Difference</h2>
-        <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
-        <a href="#" class="donate-button">Donate Now</a>
-    </section>
+  <!-- Decorative yellow shape at the bottom -->
+  <div class="yellow-shape"></div>
 </body>
 </html>
+
+
