--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Right side: Image -->
     <div class="right">
       <!-- Main image, use a placeholder for now -->
-      <img src="https://cdn2.dropmarkusercontent.com/52043/01205d5f956e467b9564354b7f2d4b22bae516334218cb517544235cd3028209/preview/Zimbabwe_2022_CG-7675.jpg?Expires=1751752930&Signature=ZhhnMJZmVUCf2z8Dsl7TiVcF~0Um9JYK4tugyo5fDycbdIawoKNhJ04wW~Obnut1ykmaxQp3tVNjG0UgZ2HRkiC3Iax87q3tLAkNAST5Tyb2bEfOPjdWRueMuD3Ac0lOBRkWApYjKxFi8ROPAz5WB5lPy6Rd-Y1jcOr1dfvGcyWirWJzzGi9VcxRGLQNBw4udFf7a543lVn6V-Wz7AfCBc4h2S~6x1ocI1hZHbQEWUK8fXXD9-0VCQQjWdTk7WnBar2QszdV0dUE~ftL32~VFgPayxxZhEFScPQqKOIEHBMDFBCnfI6~LxoEKQ2X99DHgbpImz52mq3oDiZw8d6GBA__&Key-Pair-Id=APKAITQYWVEN757ZA4KQ" alt="Person with water" class="main-image">
+      <img src="https://i.imgur.com/eXp7lrb.jpeg" alt="Person with water" class="main-image">
     </div>
   </div>
 
